fix overflow

--- a/src/app/pages/tradtondoc/tradtondoc.component.scss
+++ b/src/app/pages/tradtondoc/tradtondoc.component.scss
@@ -15,6 +15,7 @@
     color: #333333;
     border-radius: 5px;
     height: 90%;
+    overflow: auto;
     .header {
       display: flex;
       justify-content: flex-end;
